--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
     "gulp-copy": "0.0.2",
+    "gulp-cssmin": "^0.1.7",
     "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.9.2",
     "gulp-minify-html": "^1.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-strip-debug": "^1.0.2",
